// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when AddButton then snapshot created 1`] = `
<header
  className="blurred"
  id="header"
>
  <div
    className="preview-wrapper"
  >
    <div
      className="brand"
    >
      <p
        className="brand-title"
      >
        <a
          className="brand-title-name"
          href=" #"
          id="blink"
          onClick={[Function]}
        >
          netflix
        </a>
        roulette
      </p>
    </div>
    <div
      className="movie-preview unselectable"
    >
      <img
        alt="Movie poster"
        className="poster"
        onClick={[Function]}
        onError={[Function]}
        role="presentation"
        src="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
      />
      <div
        className="movie-preview-description-block"
      >
        <h1
          className="movie-preview-title"
        >
          Fifty Shades Freed
        </h1>
        <p
          className="movie-preview-rating"
        >
          6.1
        </p>
        <p
          className="movie-preview-genres"
        />
        <p
          className="movie-preview-release"
        >
          2018
        </p>
        <p
          className="movie-preview-runtime"
        >
          106
        </p>
        <p
          className="movie-preview-description"
        >
          Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
        </p>
      </div>
    </div>
    <button
      className="close-preview-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <img
        alt="close preview"
        className="close-preview"
        src="../../../../public/images/search_42.png"
      />
    </button>
  </div>
</header>
`;

exports[`when AddButton then snapshot created when details is null 1`] = `
<header
  className="blurred"
  id="header"
>
  <div
    className="wrapper unselectable"
  >
    <div
      className="brand"
    >
      <p
        className="brand-title"
      >
        <a
          className="brand-title-name"
          href=" #"
          id="blink"
          onClick={[Function]}
        >
          netflix
        </a>
        roulette
      </p>
    </div>
    <div
      className="search"
    >
      <label
        className="search-title"
        htmlFor="search-field"
      >
        FIND YOUR MOVIE
        <div
          className="search-panel"
        >
          <input
            className="search-field"
            id="search-field"
            onChange={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            placeholder="What do you want to watch?"
            type="search"
            value=""
          />
          <button
            className="search-button"
            onClick={[Function]}
            type="button"
          >
            Search
          </button>
          <button
            className="add-button"
            onClick={[Function]}
            type="button"
          >
            + ADD MOVIE
          </button>
        </div>
      </label>
    </div>
  </div>
</header>
`;

exports[`when AddButton then snapshot created when preview and details are null 1`] = `
<header
  className="blurred"
  id="header"
>
  <div
    className="wrapper unselectable"
  >
    <div
      className="brand"
    >
      <p
        className="brand-title"
      >
        <a
          className="brand-title-name"
          href=" #"
          id="blink"
          onClick={[Function]}
        >
          netflix
        </a>
        roulette
      </p>
    </div>
    <div
      className="search"
    >
      <label
        className="search-title"
        htmlFor="search-field"
      >
        FIND YOUR MOVIE
        <div
          className="search-panel"
        >
          <input
            className="search-field"
            id="search-field"
            onChange={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            placeholder="What do you want to watch?"
            type="search"
            value=""
          />
          <button
            className="search-button"
            onClick={[Function]}
            type="button"
          >
            Search
          </button>
          <button
            className="add-button"
            onClick={[Function]}
            type="button"
          >
            + ADD MOVIE
          </button>
        </div>
      </label>
    </div>
  </div>
</header>
`;

exports[`when AddButton then snapshot created when preview is null 1`] = `
<header
  className="blurred"
  id="header"
>
  <div
    className="preview-wrapper"
  >
    <div
      className="brand"
    >
      <p
        className="brand-title"
      >
        <a
          className="brand-title-name"
          href=" #"
          id="blink"
          onClick={[Function]}
        >
          netflix
        </a>
        roulette
      </p>
    </div>
    <div
      className="movie-preview unselectable"
    >
      <img
        alt="Movie poster"
        className="poster"
        onClick={[Function]}
        onError={[Function]}
        role="presentation"
        src="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
      />
      <div
        className="movie-preview-description-block"
      >
        <h1
          className="movie-preview-title"
        >
          Fifty Shades Freed
        </h1>
        <p
          className="movie-preview-rating"
        >
          6.1
        </p>
        <p
          className="movie-preview-genres"
        />
        <p
          className="movie-preview-release"
        >
          2018
        </p>
        <p
          className="movie-preview-runtime"
        >
          106
        </p>
        <p
          className="movie-preview-description"
        >
          Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
        </p>
      </div>
    </div>
    <button
      className="close-preview-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <img
        alt="close preview"
        className="close-preview"
        src="../../../../public/images/search_42.png"
      />
    </button>
  </div>
</header>
`;
